<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:focusableInTouchMode="true"
    card_view:cardCornerRadius="4dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"/>

            <EditText
                android:id="@+id/goal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapSentences"
                android:maxLength="@integer/title_length"
                android:maxLines="2"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/start_time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goal_start_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    tool:text="August 21, 2017 10:30pm"/>

                <Button
                    android:id="@+id/goal_start_btn"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:text="@string/pick_time"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/end_time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goal_end_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    tool:text="August 21, 2017 10:30pm"/>

                <Button
                    android:id="@+id/goal_end_btn"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="6dp"
                    android:text="@string/pick_time"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/wager"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goal_wager"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    tool:text="@string/wagered"/>

                <Button
                    android:id="@+id/goal_wager_minus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/bg_minus"/>

                <TextView
                    android:id="@+id/goal_wager_middle"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    tool:text="100%"/>

                <Button
                    android:id="@+id/goal_wager_plus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="6dp"
                    android:background="@drawable/bg_plus"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/referee"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background">

                <Spinner
                    android:id="@+id/goal_referee_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or"/>

            <EditText
                android:id="@+id/goal_referee"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/new_referee_hint"
                android:imeOptions="flagNoExtractUi"
                android:maxLength="@integer/username_length"
                android:textAlignment="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/is_public"/>

                <Switch
                    android:id="@+id/is_public_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="6dp"
                    android:checked="true"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/encouragement"/>

            <EditText
                android:id="@+id/goal_encouragement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/encouragement_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapSentences"
                android:maxLength="@integer/encouragement_length"
                android:maxLines="2"/>

            <Button
                android:id="@+id/set_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/rounded_button"
                android:text="@string/set_goal"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>