<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/bg_profile"/>

        <LinearLayout
            android:id="@+id/profile_info_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tool:text="username"/>

            <TextView
                android:id="@+id/profile_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                tool:text="This is a bio"/>

            <TextView
                android:id="@+id/profile_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tool:text="Reputation: 100"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/profile_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/edit"
            android:padding="5dp"
            app:srcCompat="@drawable/bg_edit"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="2dp"
        android:paddingEnd="6dp"
        android:paddingStart="6dp"
        android:text="@string/profile_activities"
        android:textColor="@color/white"
        android:textSize="14sp"/>
</LinearLayout>