<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/goal_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>
    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/no_goals"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/fab_menu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/fab_new" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_fab_new" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fab_menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/fab_popular" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="center"
            android:src="@drawable/ic_fab_popular" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_goal"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="16dp"
        android:scaleType="center"
        android:src="@drawable/ic_fab_add" />
</FrameLayout>