<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/profile"
                    app:srcCompat="@drawable/bg_profile" />

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/profile_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tool:text="username" />

                        <TextView
                            android:id="@+id/profile_bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            tool:text="This is a bio" />

                        <TextView
                            android:id="@+id/profile_points"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            tool:text="Reputation: 100" />
                    </LinearLayout>
                </ScrollView>

                <ImageView
                    android:id="@+id/profile_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/edit"
                    android:padding="5dp"
                    app:srcCompat="@drawable/bg_edit" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:text="@string/profile_activities"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/profile_activity_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/no_profile_activities"
                android:textStyle="italic" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.CardView>